--- a/src/components/Offer/Offer.scss
+++ b/src/components/Offer/Offer.scss
@@ -45,11 +45,13 @@
     img {
       width: 100%;
       height: 100%;
-      object-fit: cover;
+      object-fit: contain;
       transition: transform 0.3s ease;
+      transform: scale(0.95);
+      padding-top: 10px;
 
       &:hover {
-        transform: scale(1.05);
+        transform: scale(1);
       }
     }
   }
